# faervell-ai-npc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
behavior-pack/: approved-examples.jsonl  dialogue-policy.yaml  disclosure-rules.yaml  persona-fragments-v1.0.2.yaml  persona.md  profession-masks.yaml  rejected-examples.jsonl  routing-rules.yaml  version.json
data/: fandom-api-audit.json  function-audit.json  sources.yaml
docs/: architecture-implementation-map.md  architecture-source.md  behavior-patch-example.yaml  deployment.md  presence-and-replies.md  stranger-persona-source.md  v0.4-release.md  v0.5-release.md  v0.6-model-policy.md  v0.7-release.md  v0.7.1-gm-review-hotfix.md  v0.7.2-gm-delivery-hotfix.md  v0.7.3-release.md  v0.7.4-release.md  v0.8.0-release.md  v1.0.0-function-audit.md  v1.0.0-pdf-compliance.md  v1.0.0-release.md  v1.0.1-retrieval-safety-hotfix.md  v1.0.3-unified-hotfix.md
external-sources/: Mimir-COMMIT.txt  PersonaUI-COMMIT.txt
faervell_npc/: __init__.py  api.py  cli.py  config.py  db.py  discord_bot.py  main.py  models.py  runtime.py  schemas.py
scripts/: audit-rp-templates-v1.0.1.py  audit_function_coverage.py  backup.sh  build_economy_index.py  deploy-hotfix-v1.0.0.sh  deploy-production.sh  enrich-templates-v1.0.2.py  extract_discord_rp.py  import_faervell_economy.py  import_stranger_template_library.py  migrate-v0.6-model-policy.sh  migrate-v0.7.3.sh  migrate-v0.7.4.sh  migrate-v0.7.sh  migrate-v0.8.0.sh  migrate-v1.0.0.sh  (+6 more)
(+105 files in other folders)
